tests/lime/fail/tokens/label_rest/byte_36.wsa
jmp .l$ .l$: push 36
